[package]
name = "zip-wasm"
version = "1.0.0-pre.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
zip = { path = "..", default-features = false, features = ["deflate"] }
wasm-bindgen = { version = "0.2.83" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
